tests/NormalTests/paczka1/fuzzy1/44568792.err
Error in line 5: xkocU A410 25,93
Error in line 3: GCGOS A647 22,4
Error in line 6: xkocU A410 71,6
Error in line 13: xkocU A785 54,1
Error in line 27: S450 A647 69,7
Error in line 34: S450 S450 54,4
Error in line 29: xkocU A785 210,1
